zz-out/pass14_run2/zz-scripts/chapter01/plot_fig04_P_vs_T_evolution.err
  File "/home/jplal/MCGT/zz-scripts/chapter01/plot_fig04_P_vs_T_evolution.py", line 59
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
